# algorand-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md  SECURITY.md  checks.sh  install_build_tools.sh
.circleci/: config.yml
.github/: dependabot.yml
benches/: benches.rs
benches/crypto/: batch_verifier.rs  merklearray.rs  mod.rs  vrf.rs
benches/data/: account.rs  basics.rs  bookkeeping.rs  committee.rs  mod.rs
docker/: Dockerfile
src/: lib.rs
src/config/: buildvars.rs  consensus.rs  default.rs  keyfile.rs  migrate.rs  mod.rs  tests.rs  version.rs
src/crypto/: batch_verifier.rs  hashable.rs  mnemonic.rs  mod.rs  multisig.rs  onetimesig.rs  ots.rs  vrf.rs
src/crypto/merklearray/: layer.rs  merkle.rs  mod.rs  partial.rs
src/crypto/merkletrie/: bitset.rs  cache.rs  mod.rs  node.rs  storage.rs  trie.rs
src/data/: account.rs  account_manager.rs  mod.rs  signed_tx_group.rs
src/data/basics/: address.rs  mod.rs  teal.rs  units.rs  user_balance.rs
src/data/bookkeeping/: block.rs  errors.rs  genesis.rs  mod.rs  tx_merkle.rs
src/data/committee/: credential.rs  mod.rs  sortition.rs  tests.rs
src/data/transactions/: application.rs  asset.rs  compactcert.rs  errors.rs  keyreg.rs  logicsig.rs  mod.rs  payment.rs  payset.rs  signed_tx.rs  teal.rs  tests.rs  transaction.rs
src/protocol/: codec.rs  consensus.rs  hash.rs  mod.rs  tags.rs  txtype.rs
