[package]
name = "algorsand"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "3.0.0-beta.4"
curve25519-dalek = "4.0.0-pre.1"
data-encoding = "2"
dirs = "4"
ed25519 = "1"
ed25519-dalek = "1"
generic-array = "0.14"
lazy_static = "1"
libsecp256k1 = "0.7"
rand = "0.8"
rmp = "0.8"
serde = "1"
serde_json = "1"
sha2 = "0.9"
shellexpand = "2"
sodiumoxide = "0.2"
thiserror = "1"
