[package]
name = "algorsand"
version = "0.1.0"
edition = "2018"

[dependencies]
bloomfilter = "1"
clap = { version = "3.1.6", features = ["derive"] }
curve25519-dalek = "4.0.0-pre.1"
data-encoding = "2"
dirs = "4"
ed25519 = "1"
ed25519-dalek = { version = "1", features = ["serde"] }
generic-array = "0.14"
integer-encoding = "3"
lazy_static = "1"
num = "0.4"
rand = "0.7" # 0.7 instead of 0.8 for compatibility with ed25519-dalek
rayon = "1"
rmp = "0.8"
rmp-serde = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
sha2 = "0.9"
shellexpand = "2"
sled = "0.34"
statrs = "0.15"
thiserror = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = "0.3"
maplit = "1"
tempfile = "3"

[[bench]]
name = "benches"
harness = false
